[gd_scene load_steps=9 format=2]

[ext_resource path="res://asset/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=1]
[ext_resource path="res://asset/ui/icons/squad_icon/icon_squad_archer.png" type="Texture" id=2]
[ext_resource path="res://asset/ui/troop_icon_item/troop_icon_item.gd" type="Script" id=3]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_14.tres" type="DynamicFont" id=4]
[ext_resource path="res://asset/ui/background/bg.png" type="Texture" id=5]
[ext_resource path="res://asset/ui/icons/stop.png" type="Texture" id=6]
[ext_resource path="res://addons/Godot-Touch-Input-Manager/InputManager.gd" type="Script" id=7]
[ext_resource path="res://asset/ui/icons/supply.png" type="Texture" id=8]

[node name="troop_icon_item" type="Panel"]
margin_right = 245.0
margin_bottom = 400.0
rect_min_size = Vector2( 245, 400 )
mouse_filter = 1
size_flags_horizontal = 7
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -78.0
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="TextureRect"]
anchor_right = 1.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Level 2"
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -190.0
grow_vertical = 0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="MarginContainer"]
modulate = Color( 0.219608, 0.219608, 0.219608, 0.847059 )
margin_right = 245.0
margin_bottom = 190.0
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 245.0
margin_bottom = 190.0
grow_vertical = 0
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 245.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Pikeman"
align = 1
valign = 2
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 245.0
margin_bottom = 48.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Atk : 23 / Def : 23 / Speed : 14"
align = 1
valign = 2
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 245.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 10 )
mouse_filter = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 245.0
margin_bottom = 82.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Cost : 25"
align = 1
valign = 2
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 245.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2

[node name="upgrade_button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 245.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = ExtResource( 1 )
text = " Upgrade (200)"
icon = ExtResource( 8 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.219608, 0.219608, 0.219608, 0.717647 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -80.0
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -75.9998
margin_right = 77.0
margin_bottom = 75.9998
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input_detection" type="Node" parent="."]
script = ExtResource( 7 )
[connection signal="gui_input" from="TextureRect" to="." method="_on_troop_icon_item_gui_input"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/upgrade_button" to="." method="_on_upgrade_button_pressed"]
